fixed: some errors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,15 +12,15 @@ theme:
     - scheme: default
       primary: indigo
       accent: indigo
-      toggle:
-        icon: material/weather-night
-        name: Switch to dark mode
-    - scheme: slate
-      primary: indigo
-      accent: indigo
-      toggle:
-        icon: material/weather-sunny
-        name: Switch to light mode
+    #   toggle:
+    #     icon: material/weather-night
+    #     name: Switch to dark mode
+    # - scheme: slate
+    #   primary: indigo
+    #   accent: indigo
+    #   toggle:
+    #     icon: material/weather-sunny
+    #     name: Switch to light mode
 
   features:
     - navigation.instant
